change title info for DFile

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Hello, Blockstack",
-  "description": "A simple demo of Blockstack Auth",
+  "name": "Hello, DFile",
+  "description": "A simple demo of DFile App",
   "icons": [
     {
     "src": "favicon.ico",
